# my-llama

./: .gitignore  pyproject.toml
src/: configs.py  inference.py  train.py
src/data/: AlpacaDataset.py  alpaca_dataset.py
src/datasets/: AlpacaDataset.py  alpaca_dataset.py
src/prompts/: alpaca.py
src/utils/: config_utils.py  inference_utils.py  model_utils.py
